[IMP] web_editor, website: make button colors selectable
Before this commit button colors were only obtained from one of the
predefined styles.

After this commit button colors can be specified by using the new
"Custom" style.

task-2612755

closes odoo/odoo#74299

Signed-off-by: Quentin Smetz (qsm) <qsm@odoo.com>

--- a/addons/web_editor/static/src/scss/web_editor.common.scss
+++ b/addons/web_editor/static/src/scss/web_editor.common.scss
@@ -753,6 +753,21 @@ blockquote {
     }
 }
 
+// Buttons with custom colors
+.btn-custom:hover, .btn-fill-custom:hover {
+    filter: invert(0.2);
+}
+.btn-outline-custom {
+    &:not(:hover) {
+        background-color: transparent !important;
+        background-image: none !important;
+    }
+    &:hover {
+        background-color: '';
+        background-image: '';
+    }
+}
+
 // Base snippet rules
 %o-we-background-layer-parent {
     &, & > * {
