--- a/addons/website/static/src/scss/website.scss
+++ b/addons/website/static/src/scss/website.scss
@@ -1497,6 +1497,9 @@ ul.o_checklist > li.o_checked::after {
 .o_wanim_overflow_x_hidden {
     overflow-x: hidden !important;
 }
+.o_animated_text {
+    display: inline-block;
+}
 
 @keyframes o_anim_bounce_in {
     0%, 20%, 40%, 60%, 80%, 100% {
