--- a/addons/web_editor/static/src/scss/web_editor.common.scss
+++ b/addons/web_editor/static/src/scss/web_editor.common.scss
@@ -805,4 +805,14 @@ section, .oe_img_bg, [data-oe-shape-data] {
 .text-gradient {
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
+
+    // FIXME (or wait for a fix in Chrome): the code below is needed to make
+    // animated text work with gradient background on Chrome. But the side
+    // effect is that text node wrapping by a span (e.g. bold, italic) no longer
+    // have the "gradient crossing all the text" on it but its own gradient.
+    * {
+        background-image: inherit;
+        -webkit-background-clip: inherit;
+        -webkit-text-fill-color: inherit;
+    }
 }
