--- a/addons/website/static/src/scss/website.edit_mode.scss
+++ b/addons/website/static/src/scss/website.edit_mode.scss
@@ -226,3 +226,21 @@ body.editor_enable {
         }
     }
 }
+
+// Website Animate
+.editor_enable.o_animated_text_highlighted {
+    .o_animated_text {
+        position: relative;
+
+        &:after {
+            content: "";
+            pointer-events: none;
+            @include o-position-absolute(0, 0, 0, 0);
+            z-index: 1;
+            // This border is useful when there is a green background behind
+            // the text.
+            border: 1px dotted white;
+            background-color: rgba(greenyellow, .2);
+        }
+    }
+}
