--- a/addons/website/static/src/scss/website.scss
+++ b/addons/website/static/src/scss/website.scss
@@ -1728,6 +1728,19 @@ ul.o_checklist > li.o_checked::after {
     animation-name: o_anim_rotate_in_down_right;
 }
 
+@keyframes o_anim_zoom_out {
+    0% {
+        opacity: 0;
+        transform: scale(1.3);
+    }
+    100% {
+        opacity: 1;
+    }
+}
+.o_anim_zoom_out {
+    animation-name: o_anim_zoom_out;
+}
+
 @keyframes o_anim_zoom_in {
     0% {
         opacity: 0;
