[FIX] stock,mrp: search on picking_type_id
Commit 2ae49ffb029b makes picking_type_id compute on stock_move_line to
get the picking type of either the picking or the manufacturing order.

Right after, commit 613e912451a4 set picking_type_id related of the
picking one to be able to search on it. (in this later scope,
manufacturing part was not needed, hence the related instead of compute.

This commit mix the two idea by having a new search function on the
computed fields to filter stock move line depending on their picking
type.

Part-of: odoo/odoo#76035

--- a/addons/stock_picking_batch/views/stock_picking_wave_views.xml
+++ b/addons/stock_picking_batch/views/stock_picking_wave_views.xml
@@ -13,7 +13,7 @@
         </field>
     </record>
     <record id="action_picking_tree_wave" model="ir.actions.act_window">
-        <field name="name">Waves Transfers</field>
+        <field name="name">Wave Transfers</field>
         <field name="res_model">stock.picking.batch</field>
         <field name="type">ir.actions.act_window</field>
         <field name="view_mode">tree,kanban,form</field>
