[IMP] project: rename the See more button into Edit project in kanban
Before this commit, we rename the 'Edit' button into 'See more' but we
prefer to directly edit the project when we click on this button
So, it is to have 'Edit' as name and directly enter in the form view of
the project in edit mode.

This commit renames the button into 'Edit'.

task-2638359
closes #76166

--- a/addons/project/views/project_views.xml
+++ b/addons/project/views/project_views.xml
@@ -676,7 +676,8 @@
                                             </div>
                                             <div role="menuitem" class="col-4">
                                                 <a t-if="record.privacy_visibility.raw_value == 'portal'" class="dropdown-item" role="menuitem" name="%(project.project_share_wizard_action)d" type="action">Share</a>
-                                                <a class="dropdown-item" role="menuitem" type="object" name="action_view_kanban_project">See More</a>
+                                                <!-- [XBO] TODO: remove the name attribute in this a tag in master -->
+                                                <a class="dropdown-item" role="menuitem" type="edit" name="action_view_kanban_project">Edit</a>
                                             </div>
                                         </div>
                                     </div>
