[FIX] stock: open move lines with context
Calling the xml action directly in the view make it miss the filling
context done in _get_action().

closes odoo/odoo#76035

Signed-off-by: William Henrotin <Whenrow@users.noreply.github.com>

--- a/addons/stock/views/stock_picking_views.xml
+++ b/addons/stock/views/stock_picking_views.xml
@@ -786,7 +786,7 @@
                                                     <a name="get_action_picking_tree_waiting" type="object">Waiting</a>
                                                 </div>
                                                 <div role="menuitem">
-                                                    <a name="%(action_get_picking_type_operations)d" type="action">Operations</a>
+                                                    <a name="get_action_picking_type_operations" type="object">Operations</a>
                                                 </div>
                                             </div>
                                             <div class="col-6 o_kanban_card_manage_section o_kanban_manage_new">
