[FIX] web: pivot: highlight correct column in comparison mode
When hovering header cells in the pivot view, the whole column is
highlighted. In comparison mode, a wrong column was highlighted
when hovering a measure.

Part-of: odoo/odoo#76146

--- a/addons/web/static/src/views/pivot/pivot_view.scss
+++ b/addons/web/static/src/views/pivot/pivot_view.scss
@@ -59,7 +59,7 @@
             }
         }
 
-        .o_pivot_measure_row {
+        .o_pivot_measure_row, .o_pivot_origin_row {
             @include o-pivot-header-cell;
         }
 
