[FIX] mail: sets the proper record name for `mail.channel.partner`
Since the addition of guests, it isn't enough to rely on the
`partner_id` of the record to get the name.

This commit adds an override of `name_get` so that the `display_name` of
the record remains consistent for both partners and guests.

closes odoo/odoo#76249

Signed-off-by: Sébastien Theys (seb) <seb@odoo.com>

--- a/addons/mail/views/mail_channel_partner_views.xml
+++ b/addons/mail/views/mail_channel_partner_views.xml
@@ -7,7 +7,7 @@
         <field name="priority">10</field>
         <field name="arch" type="xml">
             <tree string="Channels">
-                <field name="partner_id"/>
+                <field name="display_name"/>
                 <field name="channel_id"/>
                 <field name="seen_message_id"/>
             </tree>
@@ -22,6 +22,7 @@
                 <sheet>
                     <group>
                         <field name="partner_id"/>
+                        <field name="guest_id"/>
                         <field name="channel_id"/>
                         <field name="seen_message_id"/>
                         <field name="rtc_inviting_session_id"/>
