[FIX] web: fix multiple display errors
This commit will fix some display errors :
 - The margin space between two btn-group on the control panel was too big;
-  The "Group By" menu was lacking an option to add the "fa-caret-down" to looks like other
    Dropdowns;
- The "Group By" menu on the graph view, when used as a subview, has been place in its own
    btn-group to behave exactly as the "Measures" menu;
- The background of the headers on the pivot table wasn't always gray;
- Some borders of the pivot table were missing.

closes odoo/odoo#76384

Related: odoo/enterprise#20821
Signed-off-by: Lucas Perais (lpe) <lpe@odoo.com>

--- a/addons/board/static/src/legacy/scss/dashboard.scss
+++ b/addons/board/static/src/legacy/scss/dashboard.scss
@@ -138,6 +138,11 @@
                     height: calc(100vh - #{$o-navbar-height});
                 }
             }
+
+            //Add padding to the old dashboard view (To remove when board is converted to OWL)
+            .o_dashboard_view {
+                padding: $o-sheet-vpadding 0;
+            }
         }
     }
 }
