[FIX] web: reintroduce RTL support
With the new OWL view infrastructure introduced by c59a36d, some parts of the right-to-left design was broken.

All the issues addressed in this commit are:
- subdropdowns are shown in the correct direction
- subdropdowns' chevrons point to the correct direction
- subdropdowns keyboard navigation with left/right arrows
- popovers' arrows point to the correct direction
- the document's `<body/>` will have the `o_rtl` CSS class

Part-of: odoo/odoo#76389

--- a/addons/web/static/src/core/dropdown/dropdown.scss
+++ b/addons/web/static/src/core/dropdown/dropdown.scss
@@ -75,7 +75,7 @@
       & > .o_dropdown_toggler {
         &:after {
           @include o-position-absolute($right: 0, $top: 0);
-          transform: translate(-.6em, .6em);
+          transform: translate(-.6em, .6em) #{"/*rtl:translate(.6em, .6em) scaleX(-1)*/"};
           font: .9em/1em FontAwesome;
           content: "\f0da";
         }
