[IMP] mail: add test tour for guest pages
closes odoo/odoo#76396

Signed-off-by: Sébastien Theys (seb) <seb@odoo.com>

--- a/addons/mail/views/discuss_public_templates.xml
+++ b/addons/mail/views/discuss_public_templates.xml
@@ -24,6 +24,7 @@
 
                 <t t-call-assets="mail.assets_common_discuss_public"/>
                 <t t-call-assets="mail.assets_discuss_public"/>
+                <t t-call-assets="mail.assets_discuss_public_test_tours" t-if="'tests' in debug or test_mode_enabled"/>
 
                 <t t-out="head or ''"/>
             </head>
