--- a/addons/mail/static/src/components/thread_view_topbar/thread_view_topbar.scss
+++ b/addons/mail/static/src/components/thread_view_topbar/thread_view_topbar.scss
@@ -57,11 +57,11 @@
 .o_ThreadViewTopbar_threadName {
     max-width: map-get($sizes, 75);
 
-    &:not(.o-isMouseOverThreadName) {
+    &:not(.o-threadNameEditable) {
         border-color: transparent; // presence of border even if invisible to prevent flicker
     }
 
-    &.o-isMouseOverThreadName {
+    &.o-threadNameEditable {
         background-color: $white;
         border-color: $border-color;
     }
@@ -69,11 +69,11 @@
 
 .o_ThreadViewTopbar_threadDescription {
 
-    &:not(.o-isMouseOverThreadDescription) {
+    &:not(.o-threadDescriptionEditable) {
         border-color: transparent; // presence of border even if invisible to prevent flicker
     }
 
-    &.o-isMouseOverThreadDescription {
+    &.o-threadDescriptionEditable {
         background-color: $white;
         border-color: $border-color;
     }
